# HydraPetV12

./: .gitignore  README.md  tool_set_config.json
.metadata/: version.ini
.metadata/.plugins/com.espressif.idf.terminal.connector.serial/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.core/: HX711_test.1731953574838.pdom  Mosquitto_test.1730793926892.pdom  blink.1732212298292.pdom  button_trigger_test.1731952984106.pdom  fast_scan.1730107337152.pdom  hydrapet.1736795810003.pdom  hydrapetv12.1736789198792.pdom  main_project.1732193214317.pdom  poloczenie z wifi.1730809030963.pdom  simple_diode.1730108177376.pdom  ssl_ds.1733832601417.pdom
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 32.snap
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
hydrapetv12/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
hydrapetv12/main/: CMakeLists.txt  Kconfig.projbuild  alarms.c  alarms.h  buttons.c  buttons.h  config.h  hx711.c  hx711.h  led.c  led.h  main.c  main.h  motor.c  motor.h  mqtt.c  mqtt.h  water_level_sensor.c  water_level_sensor.h  wifi.c  wifi.h
(+68 files in other folders)
